# power1d

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  push-docs.yml  push-pypi.yml  push-test-pypi.yml
docs/: .buildinfo  API.html  CNAME  Examples.html  License.html  References.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: API.doctree  Examples.doctree  License.doctree  References.doctree  environment.pickle  index.doctree
docs/API/: data.html  geom.html  models.html  noise.html  prob.html  random.html  results.html  roi.html  stats.html
docs/Examples/: DataSample.html  PowerAnalysis.html  SampleSize.html
docs/_sphinx_source/: conf.py  make.bat
examples/: all_geom.py  all_noise.py  ex_experiment.py  ex_experiment_weather.py  ex_geom_GaussianPulse.py  ex_geom_operators.py  ex_model_datasample.py  ex_model_datasample_weather.py  ex_noise_Gaussian.py  ex_noise_seed.py  ex_percent_increase_sample_size.py  ex_power.py  ex_power_two_sample.py  ex_power_twotail.py  power_models.py  val_0d.py  val_0d_example.py  val_0d_twotail.py  val_1d_iv.py  val_1d_nct.py  weather_0_import.py  weather_1_plot.py  weather_2_inference.py
power1d/: __init__.py  _base.py  data.py  geom.py  models.py  noise.py  prob.py  random.py  results.py  roi.py  stats.py
power1d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recipe/: meta.yaml
src/power1d/: io.py  (+13 more)
tests/: test_basic.py  test_data_sample_modeling.py  test_power.py  test_samplesize.py
(+86 files in other folders)
